fix message-box text overflow #33

--- a/src/components/ui-kit-components/datepicker/datepicker.scss
+++ b/src/components/ui-kit-components/datepicker/datepicker.scss
@@ -107,13 +107,13 @@
             }
           }
         }
-      }
 
-      &-current-day {
-        background-color: $theme-secondary-main;
-
-        a {
-          color: $base-secondary-main;
+        .ui-datepicker-current-day {
+          background-color: $theme-secondary-main;
+  
+          a {
+            color: $base-secondary-main;
+          }
         }
       }
 
